--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
+    "@solana-mobile/wallet-adapter-mobile": "^0.0.1-alpha.0",
+    "@solana/wallet-adapter-base": "^0.9.7",
+    "@solana/wallet-adapter-react": "^0.15.6",
+    "@solana/wallet-adapter-react-ui": "^0.9.8",
+    "@solana/wallet-adapter-wallets": "^0.16.6",
+    "@solana/web3.js": "^1.47.3",
     "next": "12.2.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.1.4"
   },
