--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@pythnetwork/client": "^2.7.1",
     "@solana-mobile/wallet-adapter-mobile": "^0.0.1-alpha.0",
     "@solana/spl-token": "^0.2.0",
+    "@solana/buffer-layout-utils": "^0.2.0",
     "@solana/wallet-adapter-base": "^0.9.7",
     "@solana/wallet-adapter-react": "^0.15.6",
     "@solana/wallet-adapter-react-ui": "^0.9.8",
