--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@mui/material": "^5.8.7",
     "@pythnetwork/client": "^2.7.1",
     "@solana-mobile/wallet-adapter-mobile": "^0.0.1-alpha.0",
-    "@solana/spl-token": "^0.2.0",
     "@solana/buffer-layout-utils": "^0.2.0",
+    "@solana/spl-token": "^0.2.0",
     "@solana/wallet-adapter-base": "^0.9.7",
     "@solana/wallet-adapter-react": "^0.15.6",
     "@solana/wallet-adapter-react-ui": "^0.9.8",
     "@solana/wallet-adapter-wallets": "^0.16.6",
     "@solana/web3.js": "^1.47.3",
+    "dotenv": "^16.0.1",
     "next": "12.2.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
