--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@solana/web3.js": "^1.47.3",
     "dotenv": "^16.0.1",
     "next": "12.2.0",
+    "notistack": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.1.4"
