--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.89",
     "@mui/material": "^5.8.7",
     "@pythnetwork/client": "^2.7.1",
     "@solana-mobile/wallet-adapter-mobile": "^0.0.1-alpha.0",
